--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(Imagenes/fondomont.png);
+background-image: url(../Imagenes/fondomont.png);
 color: rgb(18, 81, 117);
 background-attachment: scroll;
 width: 100vw;
@@ -12,7 +12,7 @@ header {display: flex;
     align-items: center;
     height: 20vw;
     width: 100vw;
-    background-image: url(Imagenes/montanas.png);
+    background-image: url(../Imagenes/montanas.png);
  }
     .logo {
         display: flex;
